--- a/Rucaptcha.NET/Rucaptcha.NET.csproj
+++ b/Rucaptcha.NET/Rucaptcha.NET.csproj
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <!--Project was exported from assembly: C:\Users\Мазяка\Desktop\PROGRAMS\GitHub\VisaCheck\VisaCheck\bin\Debug\Antigate.NET.dll-->
+  <!--Project was exported from assembly: C:\Users\Мазяка\Desktop\PROGRAMS\GitHub\VisaCheck\VisaCheck\bin\Debug\Rucaptcha.NET.dll-->
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{62601D23-AFA4-4F56-AAFE-6E951D234D8A}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>Antigate.NET</AssemblyName>
+    <AssemblyName>Rucaptcha.NET</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <ApplicationVersion>1.1.0.2</ApplicationVersion>
     <FileAlignment>512</FileAlignment>
-    <RootNamespace>Akumu.Antigate</RootNamespace>
+    <RootNamespace>Akumu.Rucaptcha</RootNamespace>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
@@ -45,8 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AntiCaptcha.cs" />
-    <Compile Include="AntigateError.cs" />
-    <Compile Include="AntigateErrorException.cs" />
+    <Compile Include="RucaptchaError.cs" />
+    <Compile Include="RucaptchaErrorException.cs" />
     <Compile Include="Param.cs" />
     <Compile Include="ParamsContainer.cs" />
     <Compile Include="Tools\ReCaptcha.cs" />
