Added a solution for Recaptcha v2

--- a/Rucaptcha.NET/Rucaptcha.NET.csproj
+++ b/Rucaptcha.NET/Rucaptcha.NET.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AntiCaptcha.cs" />
+    <Compile Include="Rucaptcha.cs" />
     <Compile Include="RucaptchaError.cs" />
     <Compile Include="RucaptchaErrorException.cs" />
     <Compile Include="Param.cs" />
